Closed
Bug 1912358
Opened 3 months ago
Closed 3 months ago
Set a proper APZHandledResult in the case of fast-fling
Categories
(Core :: Panning and Zooming, defect, P2)
Tracking
()
RESOLVED
FIXED
131 Branch
Tracking | Status | |
---|---|---|
firefox131 | --- | fixed |
People
(Reporter: hiro, Assigned: hiro)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
During fast-fling we don't deliver any events to content, but we do scroll the content.
There's a case where we don't properly set APZHandledResult, the case I found is;
- There's an APZ aware event listener in the content
- We initialize the APZHandledResult with
Nothing()
- During fast fling the APZHandledResult isn't updated, thus we return
Nothing()
.
I think this is one of the cases that pull-to-refresh is triggered on Uber.com (bug 1903682).
Assignee | ||
Comment 1•3 months ago
|
||
This is for bug 1085404.
Assignee | ||
Comment 2•3 months ago
|
||
During fast-fling, any event isn't delivered to contents, but fast-fling
causes scrolling, thus we need to tell the state to GeckoView via
the APZHandledResult.
The JUnit test case causes an assertion (bug 1852854) without this change.
Pushed by hikezoe.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1855922d00e0
Add a mochitest that any touch event is delivered to content. r=botond
https://hg.mozilla.org/integration/autoland/rev/373d942b1944
Set a proper APZHandledResult in the case of fast-fling. r=botond,geckoview-reviewers,m_kato
Comment 4•3 months ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/1855922d00e0
https://hg.mozilla.org/mozilla-central/rev/373d942b1944
Status: ASSIGNED → RESOLVED
Closed: 3 months ago
status-firefox131:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 131 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•