Bug 1912358 - Set a proper APZHandledResult in the case of fast-fling. r=botond,geckoview-reviewers,m_kato

During fast-fling, any event isn't delivered to contents, but fast-fling
causes scrolling, thus we need to tell the state to GeckoView via
the APZHandledResult.

The JUnit test case causes an assertion (bug 1852854) without this change.

Differential Revision: https://phabricator.services.mozilla.com/D218898