mobile/android/geckoview/src/androidTest/java/org/mozilla/geckoview/test/BaseSessionTest.kt
@@ -146,6 +146,7 @@ open class BaseSessionTest(
         const val INTERSECTION_OBSERVER_HTML_PATH = "/assets/www/intersection-observer.html"
         const val INTERSECTION_OBSERVER_DESKTOP_HTML_PATH = "/assets/www/intersection-observer-desktop.html"
         const val BUG1909181_HTML_PATH = "/assets/www/bug1909181.html"
+        const val BUG1912358_HTML_PATH = "/assets/www/bug1912358.html"
 
         const val TEST_ENDPOINT = GeckoSessionTestRule.TEST_ENDPOINT
         const val TEST_HOST = GeckoSessionTestRule.TEST_HOST
